[package]
name = "cratesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base16ct = { version = "0.1.1", features = ["std"] }
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
