[package]
name = "cratesync"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.58"
base16ct = { version = "0.1.1", features = ["std"] }
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["blocking", "gzip"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
